--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,21 +7,23 @@
     android:orientation="vertical"
     tools:context=".MainActivity">
 
+
     <TextView
         android:id="@+id/tvUserMessage"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
+        android:textSize="20sp"
+        android:gravity="center"
         android:layout_marginTop="20dp"
         android:fontFamily="@font/roboto_bold"
-        android:textSize="20sp" />
+        android:text="TextView" />
 
     <Button
         android:id="@+id/btnDownloadUserData"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="40dp"
         android:layout_marginBottom="68dp"
         android:background="@color/teal_700"
         android:fontFamily="@font/roboto_bold"
@@ -35,7 +37,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="40dp"
         android:fontFamily="@font/roboto_bold"
         android:textSize="20sp"
         tools:text="Count" />
